[package]
name = "nat-tunnel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
tun = "0.5"
yamux = "0.13"

[[bin]]
name = "nat-tunnel-client"
path = "src/client.rs"

[[bin]]
name = "nat-tunnel-server"
path = "src/server.rs"